--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     AFTER the 'vue.js' above, it's IMPORTANT -->
     <script src="node_modules/vue-resource/dist/vue-resource.js"></script>
     <script src="node_modules/scrollmonitor/scrollMonitor.js"></script>
+    <script src="node_modules/pusher-js/dist/web/pusher.js"></script>
     <script type="text/javascript" src="public/script.js"></script>
 
 </body>
